[package]
name = "shf-save-editor"
version = "0.1.0"
authors = ["descawed <github@descawed.com>"]
edition = "2024"
description = "A low-level save editor for Silent Hill f"
repository = "https://github.com/descawed/shf-save-editor"

[dependencies]
anyhow = "1.0.100"
binrw = "0.15.0"
bitflags = "2.10.0"
eframe = "0.33"
egui = "0.33"
rfd = "0.16"
